refactor: biology refactor

--- a/dnatranscription.html
+++ b/dnatranscription.html
@@ -6,18 +6,18 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - RNA Complement Generator</title>
-    <meta name="title" content="MathFlare - DNA Complement Generator">
-    <meta name="og:title" content="MathFlare - DNA Complement Generator" />
-    <meta name="twitter:title" content="MathFlare - DNA Complement Generator" />
+    <title>MathFlare - DNA Transcription</title>
+    <meta name="title" content="MathFlare - DNA Transcription">
+    <meta name="og:title" content="MathFlare - DNA Transcription" />
+    <meta name="twitter:title" content="MathFlare - DNA Transcription" />
     <meta name="keywords"
-        content="complementary rna, rna complement, rna complement generator, rna, biology, genetics, mathflare, math flare">
-    <meta name="description" content="Calculate the average of a set of numbers." />
-    <meta name="og:description" content="Calculate the average of a set of numbers." />
-    <meta name="twitter:description" content="Calculate the average of a set of numbers." />
+        content="dna, transcription, dna transcription, rna, biology, genetics, mathflare, math flare">
+    <meta name="description" content="Transcription of DNA." />
+    <meta name="og:description" content="Transcription of DNA." />
+    <meta name="twitter:description" content="Transcription of DNA." />
     <meta name="author" content="MathFlare.xyz" />
-    <meta name="og:url" content="https://www.mathflare.xyz/complementaryrna" />
-    <link rel="canonical" href="https://www.mathflare.xyz/complementaryrna">
+    <meta name="og:url" content="https://www.mathflare.xyz/dnatranscription" />
+    <link rel="canonical" href="https://www.mathflare.xyz/dnatranscription">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:type" content="website" />
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white px-4">RNA Complement Generator</h1>
+        <h1 class="text-white px-4">DNA Transcription</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off" spellcheck="false">
             <div class="center-form">
@@ -67,10 +67,10 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="comprnacalc" class="btn btn-success btn-lg" value="Generate">
+                <input type="submit" id="comprnacalc" class="btn btn-success btn-lg" value="Transcript">
             </div>
             <div class="my-4">
-                <a href="https://duckduckgo.com/?q=generate+rna+complement" target="_blank" rel="noopener"
+                <a href="https://duckduckgo.com/?q=DNA+transcription" target="_blank" rel="noopener"
                     class="btn btn-outline-light">Find information on the web</a>
             </div>
             <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
@@ -119,7 +119,7 @@
     </div>
     <!-- SCRIPTS START -->
 
-    <script src="dist/complementary-rna.js"></script>
+    <script src="dist/dnatranscription.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
