--- a/logar.html
+++ b/logar.html
@@ -60,8 +60,9 @@
                     step="0.1" />
             </div>
             <br />
-            <div class="center-form">
+            <div class="btn-group">
                 <input type="submit" id="button" class="btn btn-success btn-lg" value="Calculate">
+                <input type="reset" class="btn btn-danger btn-lg" value="Clear">
             </div>
         </form>
         <br />
@@ -81,8 +82,9 @@
                     step="0.1" />
             </div>
             <br />
-            <div class="center-form">
+            <div class="btn-group">
                 <input type="submit" id="button2" class="btn btn-success btn-lg" value="Calculate">
+                <input type="reset" class="btn btn-danger btn-lg" value="Clear">
             </div>
         </form>
         <br />
@@ -97,7 +99,7 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    
+
     <script src="dist/logar.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
