refactor: annual refact chemical equations

--- a/carboncombustions.html
+++ b/carboncombustions.html
@@ -63,8 +63,9 @@
                 <input type="number" id="carbons" placeholder="carbons" class="form-control mb-0" step="1" />
             </div>
             <br />
-            <div class="center-form">
+            <div class="btn-group">
                 <input type="submit" id="combustcalc" class="btn btn-success btn-lg" value="Calculate">
+                <input type="reset" class="btn btn-danger btn-lg" value="Clear">
             </div>
         </form>
         <br />
@@ -78,7 +79,7 @@
         </div>
     </div>
     <!-- SCRIPTS START -->
-    
+
     <script src="dist/carboncombustions.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
