--- a/neutralization.html
+++ b/neutralization.html
@@ -69,8 +69,9 @@
                 </div>
             </div>
             <br />
-            <div class="center-form">
+            <div class="btn-group">
                 <input type="submit" id="eliminationcalc" class="btn btn-success btn-lg" value="Calculate">
+                <input type="reset" class="btn btn-danger btn-lg" value="Clear">
             </div>
         </form>
         <br />
@@ -84,7 +85,7 @@
         </div>
     </div>
     <!-- SCRIPTS START -->
-    
+
     <script src="dist/neutralization.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
