--- a/acidcarbonatereaction.html
+++ b/acidcarbonatereaction.html
@@ -71,8 +71,9 @@
                 </div>
             </div>
             <br />
-            <div class="center-form">
+            <div class="btn-group">
                 <input type="submit" id="acidcarboncalc" class="btn btn-success btn-lg" value="Calculate">
+                <input type="reset" class="btn btn-danger btn-lg" value="Clear">
             </div>
         </form>
         <br />
@@ -87,7 +88,7 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    
+
     <script src="dist/acidcarbonate.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
