--- a/acidmetalreaction.html
+++ b/acidmetalreaction.html
@@ -68,8 +68,9 @@
                 </div>
             </div>
             <br />
-            <div class="center-form">
+            <div class="btn-group">
                 <input type="submit" id="acmetalcalc" class="btn btn-success btn-lg" value="Calculate">
+                <input type="reset" class="btn btn-danger btn-lg" value="Clear">
             </div>
         </form>
         <br />
@@ -84,7 +85,7 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-    
+
     <script src="dist/acidmetalreaction.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
