prod: halloween decoration

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <!-- NAVBAR END -->
     <div class="container p-4" style="margin-top: 10em;">
         <div class="text-center mb-5">
-            <h1 class="display-5" style="font-weight: 450;"><img src="Assets/icon.png" class="user-select-none mb-1"
-                    style="height: 1em;" alt="logo"> MathFlare</h1>
+            <h1 class="display-5 font-spooky" style="font-weight: 450;"><img src="Assets/icon.png"
+                    class="user-select-none mb-1" style="height: 1em;" alt="logo"> MathFlare</h1>
             <p class="lead fs-4 fw-normal text-danger" id="slogan"
                 style="font-family: 'Mathnito', 'MathFont', sans-serif;"></p>
         </div>
