prod: minor changes

--- a/calculator.html
+++ b/calculator.html
@@ -174,8 +174,10 @@
                 </div>
             </form>
         </div>
-        <p class="mx-4"><i class="bi bi-chat-left-dots"></i> Feedback wanted! Please <a href="contact.html">use our
-                contact form</a> or open a <a href="https://github.com/mathflare/mathflare/issues">GitHub issue</a> to
+        <p class="mx-4"><i class="bi bi-chat-left-dots"></i> Feedback wanted! Please <a href="contact.html"
+                class="hover-link">use our
+                contact form</a> or open a <a href="https://github.com/mathflare/mathflare/issues" class="hover-link"
+                target="_blank" rel="noopener">GitHub issue</a> to
             give us some feedback on our shiny new scientific calculator</p>
     </div>
     <!-- SCRIPTS START -->
