--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <!-- NAVBAR END -->
     <div class="container p-4" style="margin-top: 10em;">
         <div class="text-center mb-5">
-            <h1 class="display-5 font-spooky" style="font-weight: 450;"><img src="Assets/icon.png"
-                    class="user-select-none mb-1" style="height: 1em;" alt="logo"> MathFlare</h1>
+            <h1 class="display-5" style="font-weight: 450;"><img src="Assets/icon.png" class="user-select-none mb-1"
+                    style="height: 1em;" alt="logo"> MathFlare</h1>
             <p class="lead fs-4 fw-normal text-danger" id="slogan"
                 style="font-family: 'Mathnito', 'MathFont', sans-serif;"></p>
         </div>
@@ -72,19 +72,19 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Logarithm calculator</h5>
-                        <a href="logar.html" class="btn btn-outline-discrete mt-2">Go &raquo;</a>
+                        <a href="logar.html" class="btn btn-outline-light mt-2">Go &raquo;</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Trigonometric calculator</h5>
-                        <a href="trigcalculator.html" class="btn btn-outline-discrete mt-2">Go &raquo;</a>
+                        <a href="trigcalculator.html" class="btn btn-outline-light mt-2">Go &raquo;</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Linear system of equations solver</h5>
-                        <a href="linear-systems.html" class="btn btn-outline-discrete mt-2">Go &raquo;</a>
+                        <a href="linear-systems.html" class="btn btn-outline-light mt-2">Go &raquo;</a>
                     </div>
                 </div>
             </div>
@@ -205,7 +205,6 @@
             'MathFlare: the other white meat',
             'Mathflare tested, mother approved.',
             'Eureka!',
-            'Aaaahhh, Mathflare!',
         ];
         const slogan = document.querySelector('#slogan');
         window.addEventListener('load', () => {
