prod: minor changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>MathFlare - Home</title>
     <meta name="title" content="MathFlare">
     <meta name="keywords"
-        content="mathflare, math-flare, math flare,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
+        content="mathflare, math-flare, math flare,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle">
     <meta name="description"
         content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
     <meta name="author" content="MathFlare.xyz" />
