--- a/proteintranslation.html
+++ b/proteintranslation.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathFlare - Translation</title>
     <meta name="title" content="MathFlare - Translation">
-    <meta name="og:title" content="MathFlare - Translation" />
+    <meta name="og:title" content="MathFlare - DNA/RNA to Protein Translator" />
     <meta name="twitter:title" content="MathFlare - Translation" />
     <meta name="keywords"
         content="protein, translation, translate rna, translate dna, codon, amino acids, biology, genetics, mathflare, math flare">
@@ -74,12 +74,12 @@
                 <a href="https://duckduckgo.com/?q=translate+rna/dna" target="_blank" rel="noopener"
                     class="btn btn-outline-light">Find information on the web</a>
             </div>
-            <p class="p-2"><span class="text-warning">X</span> means that a character you entered in the sequence is not
+            <p class="p-0 m-0"><span class="text-warning">X</span> means that a character you entered in the sequence is
+                not
                 valid.</p>
-            <p class="p-2"><span class="text-success">*</span> means end codon</p>
+            <p class="p-0 m-0 mt-1"><span class="text-success">*</span> means end codon</p>
         </form>
-        <p id="hasxmessage" class="text-warning p-2"></p>
-        <div style="max-height: 1em;">
+        <div class="mt-3" style="max-height: 1em;">
             <p class="text-success text-break" id="proteinout"></p>
         </div>
         <br />
