prod: minor changes

--- a/proteintranslation.html
+++ b/proteintranslation.html
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white px-4">Translation</h1>
+        <h1 class="text-white px-4">DNA/RNA to Protein Translator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <h3 class="text-white px-4">DNA&#8725;RNA to Protein</h3>
         <hr class="bg-danger" style="width: 30%;" />
