--- a/dnarnacontent.html
+++ b/dnarnacontent.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - DNA and RNA Contents</title>
+    <title>MathFlare - DNA/RNA Content Calculator</title>
     <meta name="title" content="MathFlare - DNA and RNA Contents">
     <meta name="og:title" content="MathFlare - DNA and RNA Contents" />
     <meta name="twitter:title" content="MathFlare - DNA and RNA Contents" />
@@ -46,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white px-4">DNA and RNA Contents</h1>
+        <h1 class="text-white px-4">DNA/RNA Content Calculator</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off" spellcheck="false">
             <div class="center-form">
