--- a/proteintranslation.html
+++ b/proteintranslation.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - Translation</title>
+    <title>MathFlare - DNA/RNA to Protein Translator</title>
     <meta name="title" content="MathFlare - Translation">
     <meta name="og:title" content="MathFlare - DNA/RNA to Protein Translator" />
     <meta name="twitter:title" content="MathFlare - Translation" />
