--- a/dnatranscription.html
+++ b/dnatranscription.html
@@ -67,7 +67,7 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="comprnacalc" class="btn btn-success btn-lg" value="Transcript">
+                <input type="submit" id="comprnacalc" class="btn btn-success btn-lg" value="Generate">
             </div>
             <div class="my-4">
                 <a href="https://duckduckgo.com/?q=DNA+transcription" target="_blank" rel="noopener"
@@ -76,9 +76,9 @@
             <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
                 <thead>
                     <tr>
-                        <th>Base</th>
-                        <th>Count</th>
-                        <th>&#37;</th>
+                        <th width="30%">Base</th>
+                        <th width="35%">Count</th>
+                        <th width="35%">&#37;</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -109,7 +109,8 @@
                     </tr>
                 </tbody>
             </table>
-            <p class="p-2"><span class="text-warning">X</span> means that a character you entered in the sequence is not
+            <p class="mt-1 mb-3 px-3"><span class="text-warning">X</span> means that a character you entered in the
+                sequence is not
                 valid.</p>
         </form>
         <div style="max-height: 1em;">
@@ -118,7 +119,6 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-
     <script src="dist/dnatranscription.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
