fix: minor bio-changes

--- a/proteincontent.html
+++ b/proteincontent.html
@@ -70,7 +70,7 @@
                 <input type="submit" id="proteincontcalc" class="btn btn-success btn-lg" value="Calculate">
                 <button type="button" onclick="printTable()" class="btn btn-warning btn-lg">Print Results</button>
             </div>
-            <p class="my-3 px-3"><span class="text-warning">For end codons in protein sequence please use </span>*</p>
+            <p class="my-3 px-3"><span class="text-warning">For stop codons in protein sequence please use </span>*</p>
             <div id="table-container">
                 <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
                     <thead>
@@ -182,7 +182,7 @@
                             <td id="w_perc"></td>
                         </tr>
                         <tr>
-                            <td><span class="text-success">*</span> (end codon)</td>
+                            <td><span class="text-success">*</span> (stop codon)</td>
                             <td id="end_count"></td>
                             <td id="end_perc"></td>
                         </tr>
