--- a/proteintranslation.html
+++ b/proteintranslation.html
@@ -77,7 +77,7 @@
             <p class="p-0 m-0"><span class="text-warning">X</span> means that a character you entered in the sequence is
                 not
                 valid.</p>
-            <p class="p-0 m-0 mt-1"><span class="text-success">*</span> means end codon</p>
+            <p class="p-0 m-0 mt-1"><span class="text-success">*</span> means stop codon</p>
         </form>
         <div class="mt-3" style="max-height: 1em;">
             <p class="text-success text-break" id="proteinout"></p>
